added textures ,updated the trees level

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
   </head>
 
-  <img hidden src="textures/grass.jpg"></img>
 
   <body>
-
+    <div id="health" value="100" max="100"></div>
     <div id="scene-container"></div>
 
       
