Fixed rings level

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="three/three.js"></script>
     <script  src="three/OrbitControls.js"></script>
+    <script  src="three/GLTFLoader.js"></script>
 
   </head>
 
