Score counter, gain/lose lifes, fixes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 
   <body>
-    <div id="health" value="100" max="100"></div>
+    <a id="info">0</a>
     <div id="scene-container"></div>
 
-      
+
     <script src="app.js"></script>
 
   </body>
