--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script  src="three/OrbitControls.js"></script>
     <script  src="three/GLTFLoader.js"></script>
 
+    <script src="app.js"></script>
     
     
   </head>
@@ -23,8 +24,19 @@
     <a id="info">0</a>
     <div id="scene-container"></div>
 
+    <div id="menu">
 
-    <script src="app.js"></script>
+      <div id="diff" onclick="diff1();"><p>1</p></div>
+      <div id="diff" onclick="diff2();"><p>2</p></div>
+      <div id="diff" onclick="diff3();"><p>3</p></div>
+
+      <div id="play" onclick="start();"><p>PLAY</p></div>
+
+      <a>asasfaws</a>
+
+    </div>
+
+
 
   </body>
 </html>
