--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script  src="three/GLTFLoader.js"></script>
 
     <script src="app.js"></script>
-    <script src="menuJS.js"></script>
+    <script src="menu.js"></script>
 
   <script> 
   </script>
@@ -35,28 +35,44 @@
       <br>
       <div class="button_menu" id ="options" onclick="show_options();"><p>OPTIONS</p></div>
       <br>
-      <div class="button_menu" id ="credits" onclick="credits();"><p>CREDITS</p></div>
+      <div class="button_menu" id ="commands" onclick="show_commands();"><p>COMMANDS</p></div>
+      <div id="menu" style="display:block; font-size: 50px;">Developed by Pietro Manganelli Conforti</div>
    </div>
 
     <div id="opt_menu" style="display:none">  
           
-      <div id="text_opt" style="display:inline-block">difficulty :</div>
-      <div class="button_opt" id ="1" onclick="setEasy();" style="display:inline-block"><p>easy</p></div>
-      <div class="button_opt" id ="2" onclick="setMedium();"style="display:inline-block"><p>medium</p></div>
-      <div class="button_opt" id ="3" onclick="setHard();"style="display:inline-block"><p>hard</p></div>
+      <div id="text_opt" style="display:inline-block">difficulty:</div>
+      <div class="button_opt" id ="1" onclick="setEasy();   " style="display:inline-block"><p>Big plane</p></div>
+      <div class="button_opt" id ="2" onclick="setMedium();   "style="display:inline-block; background:#f52b2b;"><p>Normal plane</p></div>
+      <div class="button_opt" id ="3" onclick="setHard();   "style="display:inline-block"><p>Paper plane</p></div>
+      <br><br>
+      <div id="text_opt" style="display:inline-block">Use FOG:</p></div>
+      <div class="button_opt" id ="yes_fog" onclick="setFog();"style="display:inline-block; background:#f52b2b; "><p>Yes</p></div>
+      <div class="button_opt" id ="no_fog" onclick="noFog();" style="display:inline-block"><p>No</p></div>
       <br>
-      <div id="text_opt" style="display:inline-block">Use FOG: </p></div>
-      <div class="button_opt" id ="yes_fog" onclick="back();"style="display:inline-block "><p>Y</p></div>
-      <div class="button_opt" id ="no_fog" onclick="setEasy();" style="display:inline-block"><p>N</p></div>
-      <br>
-      <div id="text_opt" style="display:inline-block">no collison mode</p></div>
-      <div class="button_opt" id ="yes_fog" onclick="back();"style="display:inline-block "><p>Y</p></div>
-      <div class="button_opt" id ="no_fog" onclick="setEasy();" style="display:inline-block"><p>N</p></div>
+      <div id="text_opt" style="display:inline-block">no obstacle collison mode:</p></div>
+      <div class="button_opt" id ="yes_coll" onclick="setColl();"style="display:inline-block; "><p>Yes</p></div>
+      <div class="button_opt" id ="no_coll" onclick="noColl();" style="display:inline-block; background:#f52b2b;"><p>No</p></div>
       <br>
       <br>
       <div class="button_opt" id ="no_fog" onclick="back();" style="display:inline-block; "><p>BACK</p></div>
+      
     </div>
 
+    <div id="com_menu" style="display:none">  
+      <div id="menu" style="display:inline-block;">[W A S D] to move <br> [L] to turn ON/OFF the spotlight<br>[SPACE] to pause the game</div>
+      <br>
+      <br>
+      <div class="button_opt" id ="no_fog" onclick="back();" style="display:inline-block; "><p>BACK</p></div>
+      <br>
+      <br>
+      <div id="menu" style="display:block; font-size: 50px;">Developed by Pietro Manganelli Conforti</div>
+    </div>
+    <div id="endScene" style="display:none">
+      <div id="tex" style="display:block; font-size: 50px;">Gioco finito</div>
+    </div>
+
+ 
     <div id="scene-container"></div>
 
   </body>
