Updated scores and velocities of each plane

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
       <div id="menu" style="display:block; font-size: 50px;">Developed by Pietro Manganelli Conforti</div>
     </div>
     <div id="endScene" style="display:none">
-      <div id="tex" style="display:block; font-size: 50px;">Gioco finito</div>
+      <div id="endText" style="display:block"></div>
+      <br>
+      <br>  
+      <br>
+      <br>
+      <div class="button_end" id ="restart" onclick="restart();" style="display:inline-block; "><p>RESTART!</p></div>
     </div>
 
  
