window size fixed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="app.js"></script>
     <script src="menu.js"></script>
 
-  <script> 
+  <script>  
   </script>
 
   </head>
@@ -35,8 +35,8 @@
       <br>
       <div class="button_menu" id ="options" onclick="show_options();"><p>OPTIONS</p></div>
       <br>
-      <div class="button_menu" id ="commands" onclick="show_commands();"><p>COMMANDS</p></div>
-      <div id="menu" style="display:block; font-size: 50px;">Developed by Pietro Manganelli Conforti</div>
+      <div class="button_menu" id ="commands" onclick="show_commands();"><p>COMMANDS</p></div> <br><br>
+      <div id="menu" style="display:block; font-size: 20px;">Developed by Pietro Manganelli Conforti</div>
    </div>
 
     <div id="opt_menu" style="display:none">  
@@ -68,12 +68,9 @@
       <br>
       <div id="menu" style="display:block; font-size: 50px;">Developed by Pietro Manganelli Conforti</div>
     </div>
+    
     <div id="endScene" style="display:none">
       <div id="endText" style="display:block"></div>
-      <br>
-      <br>  
-      <br>
-      <br>
       <div class="button_end" id ="restart" onclick="restart();" style="display:inline-block; "><p>RESTART!</p></div>
     </div>
 
