update audio for githubpages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="app.js"></script>
     <script src="menu.js"></script>
+    <script src="audio.js"></script>
 
   <script>  
 
@@ -28,7 +29,7 @@
   <body onload="init_starting_menu()">
     <a id="info" style="display:none;">0</a>
 
-    <audio id="audio" src="/audio/BigCarTheft.mp3" preload="auto"></audio>
+    <!--<audio id="audio" src="/audio/BigCarTheft.mp3" preload="auto"></audio>-->
 
     
     
