Added clouds, minor fixes

--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
     <script src="audio.js"></script>
 
   <script>  
-
-
   </script>
-
   </head>
 
-
   <body onload="init_starting_menu()">
+
     <a id="info" style="display:none;">0</a>
-    
-    <div id="menu">
+    <link rel="shortcut icon" href="">
+    <div id="menu" onload="play()">
       <div id="title"><p>PLANERUN</p></div>
       <div class="button_menu" id ="play" onclick="start();"><p>PLAY</p></div>
       <br>
